<?xml version="1.0"?>
<package format="3">
  <name>manymove_signals</name>
  <version>0.1.0</version>
  <description>Action servers for handling I/O and system commands for manymove_planner</description>
  <maintainer email="pastoriomarco@gmail.com">pastoriomarco</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>action_msgs</build_depend>
  <build_depend>xarm_msgs</build_depend>
  <build_depend>manymove_planner</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>xarm_msgs</exec_depend>
  <exec_depend>manymove_planner</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Export dependencies -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
